fix: prevent audit log column values from being truncated
(cherry picked from commit d5b4039e457b8f76d40698df1c1cf104a4d77f75)

--- a/gravitee-am-ui/src/app/domain/settings/audits/audits.component.scss
+++ b/gravitee-am-ui/src/app/domain/settings/audits/audits.component.scss
@@ -31,9 +31,14 @@ a.expanded {
 
 .audit-cell-text {
   display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  word-break: break-word;
+  white-space: normal;
+}
+
+.audit-event-text {
+  font-family: monospace;
+  word-break: break-all;
+  white-space: normal;
 }
 
 .ngx-datatable.material {
@@ -41,11 +46,15 @@ a.expanded {
 }
 
 :host {
-  ::ng-deep.ngx-datatable.material .datatable-body .datatable-body-row .datatable-body-cell {
+  ::ng-deep .ngx-datatable.material .datatable-body .datatable-body-row .datatable-body-cell {
     font-size: 12px;
+    overflow-wrap: break-word;
+    white-space: normal;
+    display: flex;
+    align-items: center;
   }
 
-  ::ng-deep.ngx-datatable.fixed-header .datatable-header .datatable-header-inner .datatable-header-cell {
+  ::ng-deep .ngx-datatable.fixed-header .datatable-header .datatable-header-inner .datatable-header-cell {
     &:first-child {
       padding-left: 32px;
     }
